--- a/widget/index.html
+++ b/widget/index.html
@@ -417,6 +417,11 @@
                         voiceSettings = voices.whisper.voice_settings;
                         modelID = voices.whisper.model_id;
                         voiceVolume = 0.75;
+                    } else if (voiceName.toLowerCase() == "cowboy") {
+                        voiceID = voices.cowboy.voice_id;
+                        voiceSettings = voices.cowboy.voice_settings;
+                        modelID = voices.cowboy.model_id;
+                        voiceVolume = 0.5;
                     } else if (bitsAmount >= 500 && voiceName.toLowerCase() == "mayor") {
                         voiceID = voices.mayor.voice_id;
                         voiceSettings = voices.mayor.voice_settings;
