--- a/widget/index.html
+++ b/widget/index.html
@@ -449,10 +449,10 @@
                         voiceSettings = voices.whisper.voice_settings;
                         modelID = voices.whisper.model_id;
                         voiceVolume = 0.75;
-                    } else if (voiceName.toLowerCase() == "cowboy") {
-                        voiceID = voices.cowboy.voice_id;
-                        voiceSettings = voices.cowboy.voice_settings;
-                        modelID = voices.cowboy.model_id;
+                    } else if (voiceName.toLowerCase() == "hatch") {
+                        voiceID = voices.hatch.voice_id;
+                        voiceSettings = voices.hatch.voice_settings;
+                        modelID = voices.hatch.model_id;
                         voiceVolume = 0.5;
                     } else if (bitsAmount >= 500 && voiceName.toLowerCase() == "mayor") {
                         voiceID = voices.mayor.voice_id;
@@ -706,10 +706,10 @@
                     voiceSettings = voices.whisper.voice_settings;
                     modelID = voices.whisper.model_id;
                     voiceVolume = 0.75;
-                } else if (voiceName.toLowerCase() == "cowboy") {
-                    voiceID = voices.cowboy.voice_id;
-                    voiceSettings = voices.cowboy.voice_settings;
-                    modelID = voices.cowboy.model_id;
+                } else if (voiceName.toLowerCase() == "hatch") {
+                    voiceID = voices.hatch.voice_id;
+                    voiceSettings = voices.hatch.voice_settings;
+                    modelID = voices.hatch.model_id;
                     voiceVolume = 0.5;
                 } else if (voiceName.toLowerCase() == "mayor") {
                     voiceID = voices.mayor.voice_id;
