--- a/widget/index.html
+++ b/widget/index.html
@@ -91,6 +91,7 @@
             var userKeyString = "";
             var userAppClientID = "";
             var userTwitchID = "";
+            var twitchAccessToken = null;
             var channelPointRewardID = "";
             var cheerWords;
             var twitchUserName = "Anonymous";
