--- a/widget/index.html
+++ b/widget/index.html
@@ -787,6 +787,7 @@
 
                 const preppedUserMessage = removeCheerWords(message).replace('[' + character + ']','').replace(/"/g, '').replace(/[“”]/g, '').replace(/[‘’]/g, '').trim();
                 const messageToAI = "The message from your client in the following french brackets: {" + preppedUserMessage + "}";
+                console.log(userLawyerInstructions);
                 console.log(messageToAI);
                 const data = {
                     model: "gpt-4o",
